@@ -38,6 +38,8 @@ import com.movtery.zalithlauncher.game.plugin.renderer.RendererPluginManager
 import com.movtery.zalithlauncher.path.LibPath
 import com.movtery.zalithlauncher.path.PathManager
 import com.movtery.zalithlauncher.setting.AllSettings
+import com.movtery.zalithlauncher.setting.computeDynamicRAMAllocation
+import com.movtery.zalithlauncher.setting.computeMaximumRAMAllocation
 import com.movtery.zalithlauncher.setting.findBestRAMAllocation
 import com.movtery.zalithlauncher.setting.unit.getOrMin
 import com.movtery.zalithlauncher.utils.device.Architecture
@@ -131,10 +133,13 @@ abstract class Launcher(
             screenSize = screenSize,
             useLocalLanguage = useLocalLanguage
         ).toMutableList()
-        val effectiveRamAllocation = if (AllSettings.autoRamAllocation.getValue()) {
-            findBestRAMAllocation(context)
-        } else {
-            AllSettings.ramAllocation.getOrMin()
+        val effectiveRamAllocation = when {
+            !AllSettings.autoRamAllocation.getValue() -> AllSettings.ramAllocation.getOrMin()
+            else -> when (AllSettings.autoRamAllocationMode.getValue()) {
+                "static"  -> findBestRAMAllocation(context)
+                "maximum" -> computeMaximumRAMAllocation(context)
+                else      -> computeDynamicRAMAllocation(context)  // "dynamic" (default)
+            }
         }
         progressFinalUserArgs(args, effectiveRamAllocation)
 
@@ -174,7 +179,7 @@ abstract class Launcher(
         screenSize: IntSize,
         useLocalLanguage: Boolean
     ): List<String> {
-        val userArguments = userArgumentsString.splitPreservingQuotes().toMutableList()
+        val userArguments = sanitizeCustomJvmArguments(userArgumentsString).toMutableList()
         val resolvFile = ensureDNSConfig()
 
         val overridableArguments = mutableMapOf<String, String>().apply {
@@ -236,6 +241,68 @@ abstract class Launcher(
 
         userArguments += additionalArguments
         return userArguments
+    }
+
+    /**
+     * Custom JVM arguments are inserted before Minecraft's generated main
+     * class arguments. A stray token such as "t" would therefore be consumed
+     * by the Java launcher as the main class and produce
+     * ClassNotFoundException: t.
+     *
+     * Keep valid options, including options whose value is a separate token,
+     * but discard orphan non-option tokens. This is deliberately limited to
+     * user-supplied arguments; generated Minecraft arguments are not filtered.
+     */
+    private fun sanitizeCustomJvmArguments(arguments: String): List<String> {
+        if (arguments.isBlank()) return emptyList()
+
+        val valueOptions = setOf(
+            "-cp",
+            "-classpath",
+            "--class-path",
+            "-p",
+            "--module-path",
+            "--upgrade-module-path",
+            "--add-modules",
+            "--limit-modules",
+            "--add-exports",
+            "--add-reads",
+            "--patch-module",
+            "--enable-native-access",
+            "-m",
+            "--module",
+            "-javaagent",
+            "-agentlib",
+            "-agentpath"
+        )
+        val tokens = arguments.splitPreservingQuotes()
+        val sanitized = ArrayList<String>(tokens.size)
+        var expectsValue = false
+
+        tokens.forEach { token ->
+            if (expectsValue) {
+                sanitized += token
+                expectsValue = false
+                return@forEach
+            }
+
+            if (!token.startsWith("-")) {
+                Logger.warning(
+                    TAG,
+                    "Ignoring invalid custom JVM argument '$token'; JVM arguments must start with '-'."
+                )
+                return@forEach
+            }
+
+            sanitized += token
+            expectsValue = token in valueOptions
+        }
+
+        if (expectsValue) {
+            Logger.warning(TAG, "Custom JVM arguments end with an option that requires a value.")
+        }
+
+        return sanitized
     }
 
     /**
